# AEP_experiments

./: .gitignore  CAA_script.py  ID_evaluation.py  ID_evaluation_old.py  ID_evaluation_old.sh  MMLU_evaluation.py  OOD_eval_prompt.py  OOD_evaluation.py  OOD_responsespower-seeking-inclination-short-alpha2.0-layer16.json  README.md  activation_steering.ipynb  converted_notebook.py  generate_ActAdd_sv.py  generate_sv.py  generate_sv_decile.py  graph_generation.py  helpers.py  merge_sv.py  merger.py  openness.jsonl  pyproject.toml  sentiment_classification.ipynb  slurm-2378006.out  test.py  variance_calc.py
ActAdd_sv/: Llama-3-8B-Instruct-agreeableness.json  Llama-3-8B-Instruct-conscientiousness.json  Llama-3-8B-Instruct-corrigible-neutral-HHH.json  Llama-3-8B-Instruct-desire-to-persuade-people-to-be-more-honest-to-others.json  Llama-3-8B-Instruct-extraversion.json  Llama-3-8B-Instruct-neuroticism.json  Llama-3-8B-Instruct-openness.json  Llama-3-8B-Instruct-politically-liberal.json  Llama-3-8B-Instruct-power-seeking-inclination.json  Llama-3-8B-Instruct-self-awareness-general-ai.json  Llama-3-8B-Instruct-want-to-kill.json
ID_eval_results/: layers-Llama-3-70B-Instruct-ActAdd-agreeableness.json  layers-Llama-3-70B-Instruct-ActAdd-conscientiousness.json  layers-Llama-3-70B-Instruct-ActAdd-corrigible-neutral-HHH.json  layers-Llama-3-70B-Instruct-ActAdd-extraversion.json  layers-Llama-3-70B-Instruct-ActAdd-neuroticism.json  layers-Llama-3-70B-Instruct-ActAdd-openness.json  layers-Llama-3-70B-Instruct-ActAdd-politically-liberal.json  layers-Llama-3-70B-Instruct-CAA-openness.json  (+70 more)
(+270 files in other folders)
